システム名を「Y's READING」に変更、ロゴ統合

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "webapp",
+  "name": "ys-reading",
+  "description": "Y's READING - Hospital Map with Medical Imaging Modalities",
   "type": "module",
   "scripts": {
     "dev": "vite",
